# RAG-chatbot

./: .gitignore  README.md  pyproject.toml
app/: chain.py  ingest.py  main.py  retriever.py
